--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1 class="section-1-heading">
           Filmmaker
         </h1>
-        <img src="images/sekyi.jpg" alt="Kwabena Sekyi-Djan" class="person-img" />
+        <img src="sekyi.jpg" alt="Kwabena Sekyi-Djan" class="person-img" />
         <h3 class="person-name">Kwabena Sekyi-Djan</h3>
         <a href="https://www.youtube.com/@lali_onthisone" target="_blank" class="section-1-btn">Other Works</a>
       </section>
