--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <h1 class="section-heading section-2-heading">PARANOIA</h1>
     <p>This is PARANOIA</p>
         <div class="center" >
-          <video width="1000" height="1000" controls>
-            <source src="vid.mp4" type="video/mp4"/>
+          <video width="800" height="800" controls>
+            <source src="https://drive.google.com/file/d/14RSsTWH8_jWgmsY1esmHQWElu8qtKGsS/view?usp=share_link" type="video/mp4"/>
           </video>
         </div>
       </section>
