--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <h1 class="section-heading section-2-heading">PARANOIA</h1>
     <p>This is PARANOIA</p>
         <div class="center" >
-          <video width="800" height="800" controls>
-            <source src="https://drive.google.com/file/d/14RSsTWH8_jWgmsY1esmHQWElu8qtKGsS/view?usp=share_link" type="video/mp4"/>
-          </video>
+          <iframe width="500" height="500"
+src="https://youtu.be/DW_3uc0rYTA">
+</iframe>
         </div>
       </section>
       
